--- a/Poly  Meals/Poly  Meals/Main_iPhone.storyboard
+++ b/Poly  Meals/Poly  Meals/Main_iPhone.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Qom-VM-sOf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Qom-VM-sOf">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
         <!--Restraunt View Controller - Restraunts-->
@@ -1508,26 +1508,83 @@
                         </connections>
                     </tableView>
                     <toolbarItems>
-                        <barButtonItem title="Total:" id="uG7-WJ-3YM">
-                            <color key="tintColor" red="0.90459582270000005" green="0.64391226239999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <barButtonItem title="$00.00" style="plain" id="1Vt-W8-AjN">
+                            <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                         </barButtonItem>
-                        <barButtonItem title="$__.__" style="plain" id="1Vt-W8-AjN">
+                        <barButtonItem title="total" style="plain" id="bul-YS-wlV">
                             <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                         </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="mmY-VD-OSM"/>
                         <barButtonItem title="View Selected" id="L8N-zv-20v">
                             <color key="tintColor" red="0.90459582270000005" green="0.64391226239999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <segue destination="KGS-yd-dP3" kind="push" identifier="cartSegue" id="uEU-pn-vHL"/>
+                            </connections>
                         </barButtonItem>
                     </toolbarItems>
                     <navigationItem key="navigationItem" id="B7M-c1-GZY"/>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                     <connections>
+                        <outlet property="passedTotalLabel" destination="bul-YS-wlV" id="t77-Sn-D4k"/>
                         <outlet property="totalLabel" destination="1Vt-W8-AjN" id="nDV-qa-7ML"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vZ8-1I-XVE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="858" y="151"/>
+        </scene>
+        <!--Selected View Controller-->
+        <scene sceneID="BIZ-Hj-tTJ">
+            <objects>
+                <tableViewController id="KGS-yd-dP3" customClass="SelectedViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="iMu-ST-paf">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cartItem" id="mf4-Fr-oMR" customClass="SelectedCell">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mf4-Fr-oMR" id="xp2-Lh-hH7">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Price" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RJ7-5Y-KUw">
+                                            <rect key="frame" x="10" y="20" width="114" height="18"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" red="0.90459582270000005" green="0.64391226239999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="r4y-fF-D8K">
+                                            <rect key="frame" x="264" y="2" width="36" height="36"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Menu Item" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SdA-Yb-y05">
+                                            <rect key="frame" x="10" y="2" width="230" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="foodName" destination="SdA-Yb-y05" id="JWi-kM-gEZ"/>
+                                    <outlet property="foodPrice" destination="RJ7-5Y-KUw" id="l7a-5L-Qmy"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="KGS-yd-dP3" id="262-DC-gl9"/>
+                            <outlet property="delegate" destination="KGS-yd-dP3" id="Qi3-eo-ogX"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="l3E-mf-RR1"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zPv-0f-uf2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1342" y="151"/>
         </scene>
     </scenes>
     <color key="tintColor" red="0.90459582270000005" green="0.64391226239999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
